--- a/src/EdLauncher.fsproj
+++ b/src/EdLauncher.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="Types.fs" />
     <Compile Include="Extensions.fs" />
+    <Compile Include="Product.fs" />
     <Compile Include="EventLog.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="MachineId.fs" />
