--- a/tests/EdLauncher.Tests.fsproj
+++ b/tests/EdLauncher.Tests.fsproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Include="Settings.fs" />
+    <Compile Include="Product.fs" />
     <Compile Include="EdLauncher.fs" />
     <Compile Include="EventLog.fs" />
     <Compile Include="MachineId.fs" />
