--- a/src/EdLauncher.fsproj
+++ b/src/EdLauncher.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Include="Types.fs" />
+    <Compile Include="Log.fs" />
     <Compile Include="Extensions.fs" />
     <Compile Include="Product.fs" />
     <Compile Include="EventLog.fs" />
