read config from file

--- a/src/EdLauncher.fsproj
+++ b/src/EdLauncher.fsproj
@@ -18,11 +18,19 @@
     <Compile Include="Steam.fs" />
     <Compile Include="Settings.fs" />
     <Compile Include="Program.fs" />
+    <None Include="settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.7.0" />
     <PackageReference Include="System.Security.Permissions" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.4" />
+    <PackageReference Include="TypeShape" Version="8.0.1" />
+    <PackageReference Include="FsConfig" Version="2.1.6" />
   </ItemGroup>
 
 </Project>
