place settings file in external folder

--- a/src/EdLauncher.fsproj
+++ b/src/EdLauncher.fsproj
@@ -18,9 +18,7 @@
     <Compile Include="Steam.fs" />
     <Compile Include="Settings.fs" />
     <Compile Include="Program.fs" />
-    <None Include="settings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <EmbeddedResource Include="settings.json" />
   </ItemGroup>
 
   <ItemGroup>
