get epic auth working by using http call instead of eos sdk
Also replaced asyncs with tasks in the process of trying to get epic to work. Ended up not being needed but it's nicer to not have to translate between async and task all over the place.

--- a/tests/EdLauncher.Tests.fsproj
+++ b/tests/EdLauncher.Tests.fsproj
@@ -4,6 +4,15 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateProgramFile>false</GenerateProgramFile>
+    <Configurations>Debug;Release;ReleaseWindows</Configurations>
+    <Platforms>AnyCPU</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'ReleaseWindows' ">
+    <Optimize Condition=" '$(Optimize)' == '' ">true</Optimize>
+    <DebugSymbols Condition="'$(DebugSymbols)' == '' ">false</DebugSymbols>
+    <Optimize Condition="'$(Optimize)' == '' ">true</Optimize>
+    <Tailcalls Condition="'$(Tailcalls)' == '' ">true</Tailcalls>
   </PropertyGroup>
 
   <ItemGroup>
