add a separate launcher since epic doesn't allow changing launch exe

--- a/src/EdLauncher/EdLauncher.fsproj
+++ b/src/EdLauncher/EdLauncher.fsproj
@@ -39,7 +39,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
-    <Content Include="..\lib\EOSSDK-Win64-Shipping.dll">
+    <Content Include="..\..\lib\EOSSDK-Win64-Shipping.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
