--- a/src/EdLauncher.Bootstrap/EdLauncher.Bootstrap.csproj
+++ b/src/EdLauncher.Bootstrap/EdLauncher.Bootstrap.csproj
@@ -3,19 +3,15 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <PublishSingleFile>true</PublishSingleFile>
-        <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
-        <PublishTrimmed>true</PublishTrimmed>
-        <TrimMode>Link</TrimMode>
-        <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
-        <DebuggerSupport>false</DebuggerSupport>
-        <EnableUnsafeUTF7Encoding>false</EnableUnsafeUTF7Encoding>
-        <EnableUnsafeBinaryFormatterSerialization>false</EnableUnsafeBinaryFormatterSerialization>
-        <EventSourceSupport>false</EventSourceSupport>
-        <InvariantGlobalization>true</InvariantGlobalization>
-        <UseSystemResourceKeys>true</UseSystemResourceKeys>
-        <HttpActivityPropagationSupport>false</HttpActivityPropagationSupport>
-        <StartupHookSupport>false</StartupHookSupport>
+        <IlcInvariantGlobalization>true</IlcInvariantGlobalization>
+        <IlcGenerateStackTraceData>false</IlcGenerateStackTraceData>
+        <IlcDisableReflection>true</IlcDisableReflection>
+        <IlcFoldIdenticalMethodBodies>true</IlcFoldIdenticalMethodBodies>
+        <IlcOptimizationPreference>Speed</IlcOptimizationPreference>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="6.0.0-*" />
+    </ItemGroup>
 
 </Project>
