--- a/src/EdLauncher/EdLauncher.fsproj
+++ b/src/EdLauncher/EdLauncher.fsproj
@@ -6,6 +6,7 @@
     <LangVersion>preview</LangVersion>
     <Configurations>Debug;Release;DebugWindows;ReleaseWindows</Configurations>
     <Platforms>AnyCPU</Platforms>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'DebugWindows' ">
