--- a/src/EdLauncher/EdLauncher.fsproj
+++ b/src/EdLauncher/EdLauncher.fsproj
@@ -28,11 +28,14 @@
     <Compile Include="Types.fs" />
     <Compile Include="Interop.fs" />
     <Compile Include="Product.fs" />
+    <Compile Include="Process.fs" />
+    <Compile Include="Steam.fs" />
+    <Compile Include="Cobra.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="MachineId.fs" />
-    <Compile Include="Steam.fs" />
     <Compile Include="Epic.fs" />
     <Compile Include="Settings.fs" />
+    <Compile Include="App.fs" />
     <Compile Include="Program.fs" />
     <EmbeddedResource Include="settings.json" />
   </ItemGroup>
