--- a/tests/EdLauncher.Tests.fsproj
+++ b/tests/EdLauncher.Tests.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <GenerateProgramFile>false</GenerateProgramFile>
     <Configurations>Debug;Release;ReleaseWindows</Configurations>
     <Platforms>AnyCPU</Platforms>
