--- a/tests/EdLauncher.Tests.fsproj
+++ b/tests/EdLauncher.Tests.fsproj
@@ -27,8 +27,8 @@
     <PackageReference Include="Expecto" Version="9.0.0" />
     <PackageReference Include="Expecto.FsCheck" Version="9.0.0" />
     <PackageReference Include="FSharp.Core" Version="4.*" />
-<!--    <PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.8.0" />-->
-<!--    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.*" />-->
+    <PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.9.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
   </ItemGroup>
 
   <ItemGroup>
