--- a/src/MinEdLauncher.Bootstrap/MinEdLauncher.Bootstrap.csproj
+++ b/src/MinEdLauncher.Bootstrap/MinEdLauncher.Bootstrap.csproj
@@ -8,6 +8,7 @@
         <IlcDisableReflection>true</IlcDisableReflection>
         <IlcFoldIdenticalMethodBodies>true</IlcFoldIdenticalMethodBodies>
         <IlcOptimizationPreference>Speed</IlcOptimizationPreference>
+        <RootNamespace>EdLauncher.Bootstrap</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
