--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
           dotnet-version: 5.0.100
           
       - name: Restore
-        run: dotnet restore
+        run: dotnet restore -r ${{ matrix.target }}
         
       - name: Build
         run: dotnet build -c ${{ matrix.config }} --no-restore
