--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,12 +59,8 @@ jobs:
           release_name="min-ed-launcher_${{ steps.version.outputs.version }}_$target"
           dotnet publish src/MinEdLauncher.Bootstrap/MinEdLauncher.Bootstrap.csproj -r "$target" --self-contained true -o "artifacts/$release_name" -c Release -p:VersionSuffix=${{ steps.version.outputs.version-suffix }}
 
-      - name: Upload Windows Artifacts
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
-          path: "artifacts/*win10*/"
-
-      - name: Upload Linux Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          path: "artifacts/*linux*/"
+          name: min-ed-launcher_${{ steps.version.outputs.version }}_${{ matrix.target }}
+          path: "artifacts/*${{ matrix.target }}*/"
