add support for proton 5.13/steam linux runtime

--- a/tests/MinEdLauncher.Tests.fsproj
+++ b/tests/MinEdLauncher.Tests.fsproj
@@ -7,6 +7,7 @@
     <Configurations>Debug;Release;ReleaseWindows</Configurations>
     <Platforms>AnyCPU</Platforms>
     <RootNamespace>EdLauncher.Tests</RootNamespace>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'ReleaseWindows' ">
