Add support for specifying game's language
Fixes #4

--- a/src/MinEdLauncher/settings.json
+++ b/src/MinEdLauncher/settings.json
@@ -1,6 +1,7 @@
 {
     "apiUri": "https://api.zaonce.net",
     "watchForCrashes": false,
+    "language": null,
     "restart": {
         "enabled": false,
         "shutdownTimeout": 3
