make product directory path dependent on platform
I don't know why, but the default launcher changes the preferred product directory path based on platform

--- a/src/MinEdLauncher/MinEdLauncher.fsproj
+++ b/src/MinEdLauncher/MinEdLauncher.fsproj
@@ -43,6 +43,7 @@
     <Compile Include="Interop.fs" />
     <Compile Include="Http.fs" />
     <Compile Include="Product.fs" />
+    <Compile Include="AuthorizedProduct.fs" />
     <Compile Include="Process.fs" />
     <Compile Include="Steam.fs" />
     <Compile Include="Cobra.fs" />
