--- a/tests/MinEdLauncher.Tests.fsproj
+++ b/tests/MinEdLauncher.Tests.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="Product.fs" />
     <Compile Include="EdLauncher.fs" />
     <Compile Include="MachineId.fs" />
+    <Compile Include="AuthorizedProduct.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
 
