--- a/src/MinEdLauncher.Bootstrap/MinEdLauncher.Bootstrap.csproj
+++ b/src/MinEdLauncher.Bootstrap/MinEdLauncher.Bootstrap.csproj
@@ -9,9 +9,9 @@
         <IlcFoldIdenticalMethodBodies>true</IlcFoldIdenticalMethodBodies>
         <IlcOptimizationPreference>Speed</IlcOptimizationPreference>
     </PropertyGroup>
-
+    
     <ItemGroup>
-      <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="6.0.0-*" />
+        <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="6.0.0-preview.3.21160.4" />
     </ItemGroup>
 
 </Project>
