Allow for overriding a product's filter.
Useful for when FDev makes a copy/paste error for a new product (i.e. when they released Odyssey with an "edh" filter instead of "edo")

fixes #25

--- a/src/MinEdLauncher/settings.json
+++ b/src/MinEdLauncher/settings.json
@@ -5,5 +5,6 @@
     "autoUpdate": true,
     "maxConcurrentDownloads": 4,
     "forceUpdate": "",
-    "processes": []
+    "processes": [],
+    "filterOverrides": []
 }
