--- a/src/MinEdLauncher/MinEdLauncher.fsproj
+++ b/src/MinEdLauncher/MinEdLauncher.fsproj
@@ -62,6 +62,7 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Data" Version="4.1.0" />
+    <PackageReference Include="FSharpx.Collections" Version="2.1.3" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
     <PackageReference Include="Ply" Version="0.3.1" />
     <PackageReference Include="Serilog" Version="2.10.0" />
