provide odyssey filter override by default
At the time of this commit, FDev's response to /3.0/user/purchases has an incorrect filter for odyssey ("edh" instead of "edo"). This default prevents new users from having to override it themselves

https://issues.frontierstore.net/issue-detail/33154

--- a/src/MinEdLauncher/settings.json
+++ b/src/MinEdLauncher/settings.json
@@ -6,5 +6,7 @@
     "maxConcurrentDownloads": 4,
     "forceUpdate": "",
     "processes": [],
-    "filterOverrides": []
+    "filterOverrides": [
+        { "sku": "FORC-FDEV-DO-1000", "filter": "edo" }
+    ]
 }
