--- a/src/MinEdLauncher/MinEdLauncher.fsproj
+++ b/src/MinEdLauncher/MinEdLauncher.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <LangVersion>preview</LangVersion>
     <Configurations>Debug;Release;DebugWindows;ReleaseWindows</Configurations>
     <Platforms>AnyCPU</Platforms>
@@ -18,7 +18,7 @@
     <UseSystemResourceKeys>true</UseSystemResourceKeys>
   </PropertyGroup>
   <ItemGroup>
-    <TrimmerRootAssembly Include="mscorlib" />
+    <TrimmerRootDescriptor Include="linkerroots.xml" />
   </ItemGroup>
   
   <PropertyGroup Condition=" '$(Configuration)' == 'DebugWindows' ">
