add horizons 4.0 launch flag

--- a/src/MinEdLauncher/settings.json
+++ b/src/MinEdLauncher/settings.json
@@ -7,6 +7,7 @@
     "forceUpdate": "",
     "processes": [],
     "filterOverrides": [
-        { "sku": "FORC-FDEV-DO-1000", "filter": "edo" }
+        { "sku": "FORC-FDEV-DO-1000", "filter": "edo" },
+        { "sku": "FORC-FDEV-DO-38-IN-40", "filter": "edh4" }
     ]
 }
