allow configuring additional products
If users own the Odyssey DLC, FDev's purchases api call doesn't respond with Horizons 4.0. This allows users to define their own product responses that get appended to the api call which can configure how the game is launched. Addresses #58

--- a/src/MinEdLauncher/settings.json
+++ b/src/MinEdLauncher/settings.json
@@ -9,5 +9,6 @@
     "filterOverrides": [
         { "sku": "FORC-FDEV-DO-1000", "filter": "edo" },
         { "sku": "FORC-FDEV-DO-38-IN-40", "filter": "edh4" }
-    ]
+    ],
+    "additionalProducts": []
 }
