add support for .rdr files when looking for product dir
closes #56

--- a/tests/MinEdLauncher.Tests.fsproj
+++ b/tests/MinEdLauncher.Tests.fsproj
@@ -24,6 +24,7 @@
     <Compile Include="EdLauncher.fs" />
     <Compile Include="MachineId.fs" />
     <Compile Include="AuthorizedProduct.fs" />
+    <Compile Include="Cobra.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
 
