--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,11 +28,10 @@ jobs:
           
       - name: Install Rust
         if: ${{ matrix.target == 'win10-x64' }}
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: stable
-          profile: minimal
-          override: true
+          components: clippy, rustfmt
 
       - name: Publish Windows
         if: ${{ matrix.target == 'win10-x64' }}
