add option to run processes on shutdown
implements #50

--- a/src/MinEdLauncher/settings.json
+++ b/src/MinEdLauncher/settings.json
@@ -6,6 +6,7 @@
     "maxConcurrentDownloads": 4,
     "forceUpdate": "",
     "processes": [],
+    "shutdownProcesses": [],
     "filterOverrides": [
         { "sku": "FORC-FDEV-DO-1000", "filter": "edo" },
         { "sku": "FORC-FDEV-DO-38-IN-40", "filter": "edh4" }
