--- a/tests/MinEdLauncher.Tests.fsproj
+++ b/tests/MinEdLauncher.Tests.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="Settings.fs" />
     <Compile Include="Product.fs" />
     <Compile Include="EdLauncher.fs" />
+    <Compile Include="Github.fs" />
     <Compile Include="MachineId.fs" />
     <Compile Include="AuthorizedProduct.fs" />
     <Compile Include="Cobra.fs" />
