--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ investigation/
 src/EdLauncher/epic-sdk-details.txt
 lib/*
 !lib/libsteam_api.so
+release-notes.md
+benchmarks/MinEdLauncher.Benchmarks/BenchmarkDotNet.Artifacts/
 
 ## rust
 target/
