--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -65,7 +65,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: artifacts
-          path: ./
+          path: artifacts
 
       - name: Show files
         run: ls -R
